[gd_scene load_steps=19 format=2]

[ext_resource path="res://res/HERO.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://res/cross.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 7 )

[sub_resource type="CircleShape2D" id=2]
radius = 1.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 6 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 7 )

[sub_resource type="Animation" id=5]
resource_name = "Climb"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 30, 31, 32 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=6]
resource_name = "Fall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=7]
resource_name = "FallStart"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 23, 25, 26 ]
}

[sub_resource type="Animation" id=8]
resource_name = "FallToIdle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 27 ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=10]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=11]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=12]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=14]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17 ]
}

[sub_resource type="Animation" id=15]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 15, 16, 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:isCanGrab")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="GrabArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
position = Vector2( 4, -5 )
shape = SubResource( 2 )

[node name="ActionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionArea"]
shape = SubResource( 3 )

[node name="CollisionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 33
frame = 18

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Climb = SubResource( 5 )
anims/Fall = SubResource( 6 )
anims/FallStart = SubResource( 7 )
anims/FallToIdle = SubResource( 8 )
anims/Grab = SubResource( 9 )
anims/Idle = SubResource( 10 )
anims/Jump = SubResource( 11 )
anims/Run = SubResource( 12 )
anims/RunEnd = SubResource( 13 )
anims/RunStart = SubResource( 14 )
anims/WallJump = SubResource( 15 )

[node name="Cross" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
[connection signal="area_entered" from="GrabArea" to="." method="_on_GrabArea_area_entered"]
[connection signal="area_entered" from="CollisionArea" to="." method="_on_CollisionArea_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
